testing/macro-tests/tests/ui/index_many_cardinality_field.stderr
error: cannot add an index field with many cardinality
  --> tests/ui/index_many_cardinality_field.rs:20:21
   |
20 |     index(fields = ["tags"]),
   |                     ^^^^^^
